--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,15 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Lasagne_-_stonesoup.jpg/250px-Lasagne_-_stonesoup.jpg">
 
     <h2>Description:</h2>
-    <p>Lasagne (US: /ləˈzɑːnjə/, also UK: /ləˈzænjə/, Italian: [laˈzaɲɲe]; singular lasagna, Italian: [laˈzaɲɲa]) are a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagne alternating with fillings such as ragù (ground meats and tomato sauce), vegetables, cheeses (which may include ricotta, mozzarella, and parmesan), and seasonings and spices, like Italian seasoning, such as garlic, oregano and basil.[3] The dish may be topped with grated cheese, which becomes melted after baking. Typically cooked pasta is assembled with the other ingredients and then baked in an oven. The resulting baked pasta is cut into single-serving square portions. </p>
+    <p>Lasagne (US: /ləˈzɑːnjə/, also UK: /ləˈzænjə/, Italian: [laˈzaɲɲe]; singular 
+        lasagna, Italian: [laˈzaɲɲa]) are a type of pasta, possibly one of the oldest types, 
+        made of very wide, flat sheets. Either term can also refer to an Italian 
+        dish made of stacked layers of lasagne alternating with fillings such as ragù (ground meats 
+        and tomato sauce), vegetables, cheeses (which may include ricotta, mozzarella, and parmesan), 
+        and seasonings and spices, like Italian seasoning, such as garlic, oregano and basil. 
+        The dish may be topped with grated cheese, which becomes melted after baking. Typically cooked 
+        pasta is assembled with the other ingredients and then baked in an oven. The resulting baked 
+        pasta is cut into single-serving square portions. </p>
 
     <h2>Ingredients</h2>
     <ul>
