--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html"> Lasagna recipe</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html"> Lasagna recipe</a></li>
+        <li><a href="./recipes/chocolate-cookie.html">Chocolate Chip Cookie Recipe</a></li>
+
+
+    </ul>
+    
+
 </body>
 </html>
