Add semicolon for consistency

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -21,7 +21,7 @@
         pasta is assembled with the other ingredients and then baked in an oven. The resulting baked 
         pasta is cut into single-serving square portions. </p>
 
-    <h2>Ingredients</h2>
+    <h2>Ingredients:</h2>
     <ul>
         <li>1 pound sweet Italian sausage </li>
         <li>¾ pound lean ground beef</li>
