Add description to chocolate chip

--- a/recipes/chocolate-cookie.html
+++ b/recipes/chocolate-cookie.html
@@ -9,5 +9,12 @@
 <body>
     <h1>Chocolate Chip Cookie Recipe</h1>
     <img src="./images/ChocolateChipCookies.jpg">
+    
+    <h2>Description:</h2>
+    <p>A chocolate chip cookie is a drop cookie that features chocolate chips or chocolate morsels as 
+        its distinguishing ingredient. Chocolate chip cookies originated in the United States around 
+        1938, when Ruth Graves Wakefield chopped up a Nestlé semi-sweet chocolate bar and added the 
+        chopped chocolate to a cookie recipe. </p>
+
 </body>
 </html>
