Add Ingredient list chocolate cookie

--- a/recipes/chocolate-cookie.html
+++ b/recipes/chocolate-cookie.html
@@ -15,6 +15,21 @@
         its distinguishing ingredient. Chocolate chip cookies originated in the United States around 
         1938, when Ruth Graves Wakefield chopped up a Nestlé semi-sweet chocolate bar and added the 
         chopped chocolate to a cookie recipe. </p>
+    
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>1 cup butter, softened </li>
+        <li>1 cup white sugar</li>
+        <li>1 cup packed brown sugar</li>
+        <li>2 eggs</li>
+        <li>2 teaspoons vanilla extract</li>
+        <li>1 teaspoon baking soda</li>
+        <li>2 teaspoons hot water</li>
+        <li>½ teaspoon salt</li>
+        <li>3 cups all-purpose flour</li>
+        <li>2 cups semisweet chocolate chips</li>
+        <li>1 cup chopped walnuts </li>
+    </ul>
 
 </body>
 </html>
