Add steps and fix image link

--- a/recipes/chocolate-cookie.html
+++ b/recipes/chocolate-cookie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chocolate Chip Cookie Recipe</h1>
-    <img src="./images/ChocolateChipCookies.jpg">
+    <img src="../images/ChocolateChipCookies.jpg">
     
     <h2>Description:</h2>
     <p>A chocolate chip cookie is a drop cookie that features chocolate chips or chocolate morsels as 
@@ -30,6 +30,17 @@
         <li>2 cups semisweet chocolate chips</li>
         <li>1 cup chopped walnuts </li>
     </ul>
+
+    <h2>Steps:</h2>
+    <ol>
+        <li>1 cup butter, softened </li>
+        <li>Cream together the butter, white sugar, and brown sugar until smooth. Beat in the eggs one
+             at a time, then stir in the vanilla. Dissolve baking soda in hot water. Add to batter 
+             along with salt. Stir in flour, chocolate chips, and nuts. Drop by large spoonfuls onto 
+             ungreased pans.</li>
+        <li>Bake for about 10 minutes in the preheated oven, or until edges are nicely browned. </li>
+
+    </ol>
 
 </body>
 </html>
