--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html"> Lasagna recipe</a></li>
         <li><a href="./recipes/chocolate-cookie.html">Chocolate Chip Cookie Recipe</a></li>
-        <li><a href="./recipes/french-toast.html">Chocolate Chip Cookie Recipe</a></li>
+        <li><a href="./recipes/french-toast.html"> French Toast Recipe</a></li>
 
 
     </ul>
