--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/lasagna.html"> Lasagna recipe</a></li>
+        <li><a href="./recipes/lasagna.html"> Lasagna Recipe</a></li>
         <li><a href="./recipes/chocolate-cookie.html">Chocolate Chip Cookie Recipe</a></li>
         <li><a href="./recipes/french-toast.html"> French Toast Recipe</a></li>
 
